Submit arrow is supposed to be inside the input field, right padding prevents text overlap

--- a/css/comments.scss
+++ b/css/comments.scss
@@ -18,7 +18,7 @@
 }
 
 #commentsTabView .newCommentForm .message {
-	width: calc(100% - 81px); /* 36 (left margin) + 30 (right padding) + 15 (right padding of surrounding box) */
+	width: calc(100% - 32px);
 	margin-left: 36px;
 	padding-right: 30px;
 	display: block;
@@ -26,11 +26,10 @@
 
 #commentsTabView .newCommentForm .submit {
 	position: absolute;
-	bottom: 0px;
-	right: 8px;
-	width: 30px;
+	bottom: -4px;
+	right: -8px;
 	margin: 0;
-	padding: 7px 9px;
+	padding: 13px 22px;;
 	background-color: transparent;
 	border: none;
 	opacity: .3;
